<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arc_base</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <author email="kristoffer.pbs@tuta.io">Kristoffer Plagborg Bak Sørensen</author>
  <author email="jens.jens@live.dk">Jens Heojgaard Jensen</author>

  <maintainer email="kristoffer.pbs@tuta.io">Kristoffer Plagborg Bak Sørensen</maintainer>
  <maintainer email="jens.jens@live.dk">Jens Høigaard Jensen</maintainer>

  <license file="../LICENSE">MIT</license>

  <url type="website">https://multi-agent-robotics.github.io/How-to-make-a-mobile-robot/</url>
  <url type="repository">https://github.com/Multi-Agent-Robotics/arc</url>
  
  <depend>arc_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vesc_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
